--- a/src/assets/css/dimens.scss
+++ b/src/assets/css/dimens.scss
@@ -6,5 +6,6 @@ $rootFontSize: 375 / 10;
   @return $px / $rootFontSize + rem
 }
 
+$titleSize: px2rem(16);
 $infoSize: px2rem(14);
 $minifoSize: px2rem(12);
