--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,12 @@
 @import './dimens.scss';
 @import './reset';
 @import './colors.scss';
+
+.text-line-2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+}
