--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -36,3 +36,31 @@
   border-bottom: px2rem(6) solid transparent;
   border-left: px2rem(6) solid transparent;
 }
+
+// 提交按钮样式
+.submit-btn {
+  position: absolute;
+  bottom: 10%;
+  width: 80%;
+  margin-left: 10%;
+  text-align: center;
+  display: inline-block;
+  color: #fff;
+  font-size: $titleSize;
+  line-height: px2rem(36);
+  background: $mainColor;
+  border-radius: px2rem(16);
+}
+
+// input表单
+.input-container {
+  line-height: px2rem(54);
+  padding: 0 px2rem(12);
+  border-bottom: px2rem(1) solid #eee;
+  input {
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border: none;
+  }
+}
